--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,9 +25,11 @@ export(create_random_hydrophobic_peptide)
 export(create_random_peptide_with_hydrophobicity)
 export(create_random_peptides)
 export(create_random_tmh)
+export(download_bergseng_et_al_2015_sup_1)
 export(explode)
 export(get_aa_transition_matrix)
 export(get_adjacent_sequences)
+export(get_bergseng_et_al_2015_sup_1)
 export(get_covid_proteome_filename)
 export(get_genetic_code)
 export(get_hlas)
