Test less on CI, only do big download locally

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(get_genetic_code)
 export(get_hlas)
 export(get_ic50_percentile_binder)
 export(get_ic50_threshold)
+export(get_ic50s_lut)
 export(get_mhc1_haplotypes)
 export(get_mhc1_peptide_length)
 export(get_mhc2_haplotype_occurance)
