Import all deps

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,7 +31,9 @@ Imports:
     nmhc2ppreds,
     Peptides,
     pureseqtmr,
+    rappdirs,
     readr,
+    readxl,
     seqinr,
     stringr,  
     tibble,
