Export 'download_ic50s_lut.R'

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(create_random_peptide_with_hydrophobicity)
 export(create_random_peptides)
 export(create_random_tmh)
 export(download_bergseng_et_al_2015_sup_1)
+export(download_ic50s_lut)
 export(explode)
 export(get_aa_transition_matrix)
 export(get_adjacent_sequences)
