--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -49,7 +49,7 @@ jobs:
         shell: Rscript {0}
 
       - name: Install MHCnuggetsr
-        run: Rscript -e 'mhcnuggetsr::install_mhcnuggets()
+        run: Rscript -e 'mhcnuggetsr::install_mhcnuggets()'
 
       - name: Check
         run: rcmdcheck::rcmdcheck(args = "--no-manual", error_on = "error")
