--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(download_ic50s_lut)
 export(explode)
 export(get_aa_transition_matrix)
 export(get_adjacent_sequences)
+export(get_bbbq_theme)
 export(get_bergseng_et_al_2015_sup_1)
 export(get_bergseng_et_al_2015_sup_1_url)
 export(get_covid_proteome_filename)
