Add haplotype abbreviations

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,4 +72,5 @@ export(predict_ic50s)
 export(predict_n_coincidence_tmh_peptide)
 export(prepare_data)
 export(replace_nth_char)
+export(simplify_haplotype_names)
 importFrom(magrittr,"%>%")
