--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ r_packages:
   - rgl
 
 r_github_packages:
-  - jimhester/covr
+  - r-lib/covr
   - jimhester/lintr
   - MangoTheCat/goodpractice
   - richelbilderbeek/tiebeaur
