--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -40,6 +40,7 @@ jobs:
           remotes::install_github("richelbilderbeek/epiprepreds")
           remotes::install_github("richelbilderbeek/cobaltr")
           remotes::install_github("richelbilderbeek/mhcnuggetsr")
+          remotes::install_github("richelbilderbeek/mhcnuggetsrinstall")
           remotes::install_bioc("msa")
           remotes::install_bioc("Biostrings")
           remotes::install_deps(dependencies = TRUE)
@@ -51,7 +52,7 @@ jobs:
         shell: Rscript {0}
 
       - name: Install MHCnuggetsr
-        run: Rscript -e 'mhcnuggetsr::install_mhcnuggets()'
+        run: Rscript -e 'mhcnuggetsrinstall::install_mhcnuggets()'
 
       - name: Check
         run: rcmdcheck::rcmdcheck(args = "--no-manual", error_on = "error")
