Use 'mhc_allele_name' instead of the incorrect 'mhc_haplotype'

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(get_aa_transition_matrix)
 export(get_adjacent_sequences)
 export(get_bbbq_theme)
 export(get_bergseng_et_al_2015_sup_1)
+export(get_bergseng_et_al_2015_sup_1_epitope_sequences)
 export(get_bergseng_et_al_2015_sup_1_url)
 export(get_covid_proteome_filename)
 export(get_genetic_code)
@@ -39,11 +40,14 @@ export(get_hlas)
 export(get_ic50_percentile_binder)
 export(get_ic50_threshold)
 export(get_ic50s_lut)
+export(get_mhc1_allele_names)
 export(get_mhc1_haplotypes)
 export(get_mhc1_peptide_length)
+export(get_mhc2_allele_names)
 export(get_mhc2_haplotype_occurance)
 export(get_mhc2_haplotypes)
 export(get_mhc2_peptide_length)
+export(get_mhc_allele_names)
 export(get_mhc_haplotypes)
 export(get_mhc_peptide_length)
 export(get_non_tmh_peptides_from_elution)
