--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -41,6 +41,7 @@ jobs:
           remotes::install_github("richelbilderbeek/epiprepreds")
           remotes::install_github("richelbilderbeek/cobaltr")
           remotes::install_github("richelbilderbeek/mhcnuggetsr")
+          remotes::install_github("richelbilderbeek/ormr")
           remotes::install_github("richelbilderbeek/mhcnuggetsrinstall")
           remotes::install_bioc("msa")
           remotes::install_bioc("Biostrings")
